# blizzapi

./: .gitignore  .pylintrc  NOTES.md  README.md  pyproject.toml  requirements.txt
examples/: example.py  run.py
src/blizzapi/: __init__.py
src/blizzapi/clients/wow/: baseClient.py  classicClient.py  classicEraClient.py  retailClient.py
src/blizzapi/core/: baseClient.py  constants.py  enums.py  fetch.py  goFetch.py  oAuth2Client.py  utils.py
tests/: run.py  test_classicClient.py  test_classicEra.py  test_env.py  test_fetch.py  test_oAuth2Client.py  test_retail.py
